// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Confirm - snapshots Confirm USD currency, privacy on 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#011401",
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#011401",
            "display": "flex",
            "minHeight": 25,
            "paddingBottom": 10,
            "paddingTop": 10,
          }
        }
        testID="header"
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 8,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "marginTop": 12,
            }
          }
        />
      </View>
      <View
        style={
          {
            "left": 0,
            "padding": 11.5,
            "position": "absolute",
            "top": 10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        />
      </View>
      <View
        style={
          {
            "padding": 13,
            "position": "absolute",
            "right": 0,
            "top": 10,
          }
        }
      >
        <Image
          source={
            {
              "testUri": "../../../assets/img/logobig-zingo.png",
            }
          }
          style={
            {
              "borderRadius": 8,
              "height": 38,
              "resizeMode": "contain",
              "width": 38,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "marginVertical": 5,
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <
            color="#18bd18"
            icon={
              {
                "icon": [
                  320,
                  512,
                  [
                    9001,
                  ],
                  "f053",
                  "M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z",
                ],
                "iconName": "chevron-left",
                "prefix": "fas",
              }
            }
            size={24}
            style={
              {
                "marginHorizontal": 10,
              }
            }
          />
        </View>
        <Text
          style={
            {
              "color": "#ffffff",
              "fontSize": 18,
              "fontWeight": "bold",
              "opacity": 0.87,
              "paddingHorizontal": 5,
            }
          }
        >
          text translated
        </Text>
        <View
          style={
            {
              "height": 30,
              "marginHorizontal": 10,
              "width": 30,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#18bd18",
            "height": 1,
            "width": "100%",
          }
        }
      />
    </View>
    <RCTScrollView
      contentContainerStyle={
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "justifyContent": "flex-start",
        }
      }
      indicatorStyle="white"
      persistentScrollbar={true}
      showsVerticalScrollIndicator={true}
      style={
        {
          "height": "80%",
          "maxHeight": "80%",
        }
      }
      testID="send.confirm.scroll-view"
    >
      <View>
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#ffffff",
              "borderRadius": 10,
              "borderWidth": 1,
              "display": "flex",
              "margin": 25,
              "padding": 10,
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "fontSize": 15,
                "fontWeight": "400",
                "opacity": 1,
                "textAlign": "center",
                "textTransform": "capitalize",
              }
            }
          >
            text translated
          </Text>
          <View
            style={
              {
                "flexDirection": "row",
                "marginHorizontal": 5,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "flex-end",
                    "flexDirection": "row",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#ffffff",
                      "fontSize": 28,
                      "fontWeight": "700",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                  testID="undefined.big-part"
                >
                   1.1234
                </Text>
                <Text
                  style={
                    {
                      "color": "#ffffff",
                      "fontSize": 19.599999999999998,
                      "margin": 0,
                      "marginBottom": 1.8666666666666667,
                      "padding": 0,
                    }
                  }
                  testID="undefined.small-part"
                >
                  6678
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "baseline",
                "flexDirection": "row",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "baseline",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#ffffff",
                      "fontSize": 20,
                      "fontWeight": "700",
                    }
                  }
                >
                  $ 37.45
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              {
                "margin": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "opacity": 0.65,
                }
              }
            >
              text translated
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                }
              }
            >
              <ActivityIndicator
                color="#18bd18"
                size="small"
              />
            </View>
          </View>
        </View>
        <Text
          style={
            {
              "color": "#c3c3c3",
              "marginLeft": 10,
              "marginTop": 0,
              "opacity": 0.65,
            }
          }
        >
          text translated
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginHorizontal": 10,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "marginHorizontal": 5,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "flex-end",
                    "flexDirection": "row",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "700",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                >
                   -.----
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "baseline",
                "flexDirection": "row",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "baseline",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#ffffff",
                      "fontSize": 18,
                      "fontWeight": "700",
                    }
                  }
                >
                  $ -.--
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "margin": 10,
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "opacity": 0.65,
              }
            }
          >
            text translated
          </Text>
          <View
            style={
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexDirection": "column",
                  "marginRight": 10,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "display": "flex",
                      "flexDirection": "column",
                      "flexWrap": "wrap",
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "fontSize": 15,
                        "fontWeight": "400",
                        "opacity": 1,
                      }
                    }
                  >
                    UA-1234...4567890
                  </Text>
                </View>
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <
                color="#18bd18"
                icon={
                  {
                    "icon": [
                      640,
                      512,
                      [],
                      "f234",
                      "M285.7 304c98.5 0 178.3 79.8 178.3 178.3 0 16.4-13.3 29.7-29.7 29.7L77.7 512C61.3 512 48 498.7 48 482.3 48 383.8 127.8 304 226.3 304l59.4 0zM528 80c13.3 0 24 10.7 24 24l0 48 48 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-48 0 0 48c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-48-48 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0 0-48c0-13.3 10.7-24 24-24zM256 248a120 120 0 1 1 0-240 120 120 0 1 1 0 240z",
                    ],
                    "iconName": "user-plus",
                    "prefix": "fas",
                  }
                }
                size={24}
                style={
                  {
                    "marginTop": 3,
                  }
                }
              />
            </View>
          </View>
          <Text
            style={
              {
                "color": "#c3c3c3",
                "marginTop": 10,
                "opacity": 0.65,
              }
            }
          >
            text translated
          </Text>
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "marginHorizontal": 5,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#ffffff",
                        "fontSize": 14,
                        "fontWeight": "700",
                        "margin": 0,
                        "padding": 0,
                      }
                    }
                  >
                     -.----
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "alignItems": "baseline",
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "baseline",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#ffffff",
                        "fontSize": 18,
                        "fontWeight": "700",
                      }
                    }
                  >
                    $ -.--
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <Text
            style={
              {
                "color": "#c3c3c3",
                "marginTop": 10,
                "opacity": 0.65,
              }
            }
          >
            text translated
          </Text>
          <Text
            selectable={true}
            style={
              {
                "color": "#c3c3c3",
                "fontSize": 15,
                "fontWeight": "400",
                "opacity": 1,
              }
            }
            testID="send.confirm-memo"
          >
            memo1
memo2
memo3
memo4
memo5
memo6
memo7
memo8
memo9
memo10
          </Text>
        </View>
        <View
          style={
            {
              "marginBottom": 30,
            }
          }
        />
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexGrow": 1,
          "justifyContent": "center",
          "marginVertical": 5,
        }
      }
    >
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#18bd18",
              "borderColor": "#18bd18",
              "borderRadius": 24,
              "borderWidth": 2,
              "justifyContent": "center",
              "maxWidth": "90%",
              "minHeight": 48,
              "minWidth": "30%",
              "opacity": 1,
              "padding": 0,
              "paddingLeft": 20,
              "paddingRight": 20,
              "width": "80%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "margin": 0,
                "minHeight": 48,
                "minWidth": 48,
                "padding": 0,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#011401",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "textAlign": "center",
                  "textTransform": "none",
                }
              }
            >
              text translated
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Confirm - snapshots Confirm no currency, privacy off 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#011401",
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#011401",
            "display": "flex",
            "minHeight": 25,
            "paddingBottom": 10,
            "paddingTop": 10,
          }
        }
        testID="header"
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 8,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "marginTop": 12,
            }
          }
        />
      </View>
      <View
        style={
          {
            "left": 0,
            "padding": 11.5,
            "position": "absolute",
            "top": 10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        />
      </View>
      <View
        style={
          {
            "padding": 13,
            "position": "absolute",
            "right": 0,
            "top": 10,
          }
        }
      >
        <Image
          source={
            {
              "testUri": "../../../assets/img/logobig-zingo.png",
            }
          }
          style={
            {
              "borderRadius": 8,
              "height": 38,
              "resizeMode": "contain",
              "width": 38,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "marginVertical": 5,
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <
            color="#18bd18"
            icon={
              {
                "icon": [
                  320,
                  512,
                  [
                    9001,
                  ],
                  "f053",
                  "M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z",
                ],
                "iconName": "chevron-left",
                "prefix": "fas",
              }
            }
            size={24}
            style={
              {
                "marginHorizontal": 10,
              }
            }
          />
        </View>
        <Text
          style={
            {
              "color": "#ffffff",
              "fontSize": 18,
              "fontWeight": "bold",
              "opacity": 0.87,
              "paddingHorizontal": 5,
            }
          }
        >
          text translated
        </Text>
        <View
          style={
            {
              "height": 30,
              "marginHorizontal": 10,
              "width": 30,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#18bd18",
            "height": 1,
            "width": "100%",
          }
        }
      />
    </View>
    <RCTScrollView
      contentContainerStyle={
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "justifyContent": "flex-start",
        }
      }
      indicatorStyle="white"
      persistentScrollbar={true}
      showsVerticalScrollIndicator={true}
      style={
        {
          "height": "80%",
          "maxHeight": "80%",
        }
      }
      testID="send.confirm.scroll-view"
    >
      <View>
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#ffffff",
              "borderRadius": 10,
              "borderWidth": 1,
              "display": "flex",
              "margin": 25,
              "padding": 10,
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "fontSize": 15,
                "fontWeight": "400",
                "opacity": 1,
                "textAlign": "center",
                "textTransform": "capitalize",
              }
            }
          >
            text translated
          </Text>
          <View
            style={
              {
                "flexDirection": "row",
                "marginHorizontal": 5,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "flex-end",
                    "flexDirection": "row",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#ffffff",
                      "fontSize": 28,
                      "fontWeight": "700",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                  testID="undefined.big-part"
                >
                   1.1234
                </Text>
                <Text
                  style={
                    {
                      "color": "#ffffff",
                      "fontSize": 19.599999999999998,
                      "margin": 0,
                      "marginBottom": 1.8666666666666667,
                      "padding": 0,
                    }
                  }
                  testID="undefined.small-part"
                >
                  6678
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              {
                "margin": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "opacity": 0.65,
                }
              }
            >
              text translated
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                }
              }
            >
              <ActivityIndicator
                color="#18bd18"
                size="small"
              />
            </View>
          </View>
        </View>
        <Text
          style={
            {
              "color": "#c3c3c3",
              "marginLeft": 10,
              "marginTop": 0,
              "opacity": 0.65,
            }
          }
        >
          text translated
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginHorizontal": 10,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "marginHorizontal": 5,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "flex-end",
                    "flexDirection": "row",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "700",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                  testID="undefined.big-part"
                >
                   0.0000
                </Text>
                <Text
                  style={
                    {
                      "color": "#ffffff",
                      "fontSize": 9.799999999999999,
                      "margin": 0,
                      "marginBottom": 0.9333333333333333,
                      "padding": 0,
                    }
                  }
                  testID="undefined.small-part"
                >
                  1000
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "margin": 10,
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "opacity": 0.65,
              }
            }
          >
            text translated
          </Text>
          <View
            style={
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexDirection": "column",
                  "marginRight": 10,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "display": "flex",
                      "flexDirection": "column",
                      "flexWrap": "wrap",
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "fontSize": 15,
                        "fontWeight": "400",
                        "opacity": 1,
                      }
                    }
                  >
                    UA-1234...4567890
                  </Text>
                </View>
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <
                color="#18bd18"
                icon={
                  {
                    "icon": [
                      640,
                      512,
                      [],
                      "f234",
                      "M285.7 304c98.5 0 178.3 79.8 178.3 178.3 0 16.4-13.3 29.7-29.7 29.7L77.7 512C61.3 512 48 498.7 48 482.3 48 383.8 127.8 304 226.3 304l59.4 0zM528 80c13.3 0 24 10.7 24 24l0 48 48 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-48 0 0 48c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-48-48 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0 0-48c0-13.3 10.7-24 24-24zM256 248a120 120 0 1 1 0-240 120 120 0 1 1 0 240z",
                    ],
                    "iconName": "user-plus",
                    "prefix": "fas",
                  }
                }
                size={24}
                style={
                  {
                    "marginTop": 3,
                  }
                }
              />
            </View>
          </View>
          <Text
            style={
              {
                "color": "#c3c3c3",
                "marginTop": 10,
                "opacity": 0.65,
              }
            }
          >
            text translated
          </Text>
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "marginHorizontal": 5,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": true,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={false}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#ffffff",
                        "fontSize": 14,
                        "fontWeight": "700",
                        "margin": 0,
                        "padding": 0,
                      }
                    }
                    testID="undefined.big-part"
                  >
                     1.1234
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#ffffff",
                        "fontSize": 9.799999999999999,
                        "margin": 0,
                        "marginBottom": 0.9333333333333333,
                        "padding": 0,
                      }
                    }
                    testID="undefined.small-part"
                  >
                    5678
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <Text
            style={
              {
                "color": "#c3c3c3",
                "marginTop": 10,
                "opacity": 0.65,
              }
            }
          >
            text translated
          </Text>
          <Text
            selectable={true}
            style={
              {
                "color": "#c3c3c3",
                "fontSize": 15,
                "fontWeight": "400",
                "opacity": 1,
              }
            }
            testID="send.confirm-memo"
          >
            memo1
memo2
memo3
memo4
memo5
memo6
memo7
memo8
memo9
memo10
          </Text>
        </View>
        <View
          style={
            {
              "marginBottom": 30,
            }
          }
        />
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexGrow": 1,
          "justifyContent": "center",
          "marginVertical": 5,
        }
      }
    >
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#18bd18",
              "borderColor": "#18bd18",
              "borderRadius": 24,
              "borderWidth": 2,
              "justifyContent": "center",
              "maxWidth": "90%",
              "minHeight": 48,
              "minWidth": "30%",
              "opacity": 1,
              "padding": 0,
              "paddingLeft": 20,
              "paddingRight": 20,
              "width": "80%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "margin": 0,
                "minHeight": 48,
                "minWidth": 48,
                "padding": 0,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#011401",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "textAlign": "center",
                  "textTransform": "none",
                }
              }
            >
              text translated
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
